<resources>
    <string name="app_name">Avengers</string>
    <string name="tony_stark">Tony Stark</string>
    <string name="tony_starkindustries_com">tony@starkindustries.com</string>
    <string name="_91_4425134312">+91 4425134312</string>
    <string name="more_information">More Information</string>
    <string name="exit_application">Exit Application</string>
    <string name="captain_america">Captain America</string>
    <string name="_91_22183348155">+91 22183348155</string>
    <string name="steve_starkindustries_com">steve@starkindustries.com</string>
    <string name="thor_odinson">Thor Odinson</string>
    <string name="thor_starkindustries_com">thor@starkindustries.com</string>
    <string name="_91_59416765473">+91 59416765473</string>
    <string name="dr_bruce_banner">Dr. Bruce Banner</string>
    <string name="bruce_starkindustries_com">bruce@starkindustries.com</string>
    <string name="_91_21339768999">+91 21339768999</string>
    <string name="t_challa">T. Challa</string>
    <string name="challa_starkindustries_com">challa@starkindustries.com</string>
    <string name="_91_972522629202">+91 972522629202</string>
    <string name="natasha_romanov">Natasha Romanov</string>
    <string name="natasha_starkindustries_com">natasha@starkindustries.com</string>
    <string name="_91_1862629202">+91 1862629202</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="preference_file_name">Avengers Preferences</string>
</resources>