<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/avengers_logo" />

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLogo"
        android:layout_marginStart="15dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/enter_mobile_number"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="6dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_below="@id/etMobileNumber"
        android:padding="6dp"
        android:inputType="textPassword"
        android:hint="@string/enter_password"

        android:maxLines="1"
        android:importantForAutofill="no" />
    
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_margin="20dp"
        android:padding="6dp"
        android:background="@color/myColor"
        android:text="@string/log_in"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/white"/>

</RelativeLayout>